# counter-as-a-service

./: Cargo.toml  Procfile  Rocket.toml
http_examples/: create_and_get_counter.http  create_and_increment_counter.http  get_counters.http
src/: main.rs
