[package]
name = "counter-as-a-service"
version = "0.1.0"
authors = ["Matias Klemola <matias.klemola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = {version = "0.4.2", default-features = false, features = ["json"]}
rocket_cors = "0.5.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[[bin]]
name = "caas"
path = "src/main.rs"
